# node-api-cts

./: .gitignore  CMakeLists.txt  PORTING.md  README.md  eslint.config.js  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: lint.yml
implementors/bun/: index.test.ts  package.json
implementors/deno/: deno.json  test.ts
implementors/node/: assert.js  features.js  gc.js  load-addon.js  must-call.js  run-tests.ts  tests.ts  tsconfig.json
include/def/: js_native_api.def  js_native_api_experimental.def  node_api.def
scripts/: update-headers.mjs
tests/: harness.d.ts  tsconfig.json
tests/engine/2_function_arguments/: test.js
tests/engine/3_callbacks/: test.js
tests/harness/: assert-is-record.js  assert.js  features.js  gc.js  must-call.js
tests/js-native-api/3_callbacks/: test.js
tests/js-native-api/4_object_factory/: test.js
tests/js-native-api/5_function_factory/: CMakeLists.txt  test.js
tests/js-native-api/6_object_wrap/: CMakeLists.txt  nested_wrap.js  test-basic-finalizer.js  test.js
tests/js-native-api/7_factory_wrap/: CMakeLists.txt  test.js
tests/js-native-api/8_passing_wrapped/: CMakeLists.txt  test.js
tests/js-native-api/test_array/: CMakeLists.txt  test.js
tests/js-native-api/test_bigint/: CMakeLists.txt  test.js
tests/js-native-api/test_cannot_run_js/: CMakeLists.txt  test.js
tests/js-native-api/test_constructor/: CMakeLists.txt  test.js  test2.js  test_null.js
tests/js-native-api/test_dataview/: CMakeLists.txt  test.js  test_dataview.c
tests/js-native-api/test_date/: CMakeLists.txt  test.js
tests/js-native-api/test_handle_scope/: CMakeLists.txt  test.js
tests/js-native-api/test_instance_data/: CMakeLists.txt  test.js
tests/js-native-api/test_new_target/: CMakeLists.txt  test.js
tests/js-native-api/test_number/: CMakeLists.txt  test.js  test_null.js
tests/js-native-api/test_promise/: CMakeLists.txt  test.js
tests/js-native-api/test_properties/: CMakeLists.txt  test.js
tests/js-native-api/test_reference_double_free/: CMakeLists.txt  test.js  test_wrap.js
tests/js-native-api/test_symbol/: CMakeLists.txt  test1.js  test2.js  test3.js
tools/: fetch-nodejs-tests-and-docs.ts
